feat: api courses and apply pageable